@@ -1,3 +1,4 @@
+2/24/14 start fleshing out SubSupText with options and setters/getters
 2/24/14 clicking on faucet shooter cancels any tap-to-dispense that may be in progress, scenery-phet#31
 2/24/14 #4, limit precision of pH in model so that consistent values are presented to user
 2/24/14 prevent needless creation of an additional custom solute in the case where the pH is unchanged
